--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: java
 
-install:
-    - TERM=dumb ./gradlew -q assemble
+install: true
+
+cache:
+    directories:
+        - $HOME/.m2
+        - $HOME/.gradle
+
+before_script:
+    - ./gradlew --version
 
 script:
     - TERM=dumb ./gradlew build jacocoTestReport jacocoRootReport
