--- a/subprojects/griffon-mail-core/griffon-mail-core.gradle
+++ b/subprojects/griffon-mail-core/griffon-mail-core.gradle
@@ -1,27 +1,30 @@
-apply plugin: 'groovy'
-apply plugin: 'org.codehaus.griffon.griffon'
-
-griffon {
-    disableDependencyResolution = false
-    includeGroovyDependencies = false
-    version = rootProject.griffonVersion
-    applicationProject = false
-}
-
-apply from: rootProject.file('gradle/code-coverage.gradle')
-
+/*
+ * SPDX-License-Identifier: Apache-2.0
+ *
+ * Copyright 2014-2020 The author and/or original authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     https://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 dependencies {
-    compile "javax.activation:activation:$activationVersion"
-    compile "javax.mail:javax.mail-api:$mailApiVersion"
+    api "javax.activation:activation:$activationVersion"
+    api "javax.mail:javax.mail-api:$mailApiVersion"
 
-    testCompile "com.icegreen:greenmail:$greenmailVersion"
-    testCompile "org.awaitility:awaitility-groovy:3.0.0"
-
-    testCompileOnly "org.codehaus.griffon:griffon-groovy-compile:${griffon.version}"
-
-    testRuntime "org.codehaus.griffon:griffon-guice:${griffon.version}"
-    testRuntime "org.slf4j:slf4j-simple:$slf4jVersion"
+    testImplementation "com.icegreen:greenmail:$greenmailVersion"
+    testImplementation "org.codehaus.griffon:griffon-beans:${griffonVersion}"
 }
 
-compileGroovy.enabled = false
-
+jar {
+    manifest {
+        attributes('Automatic-Module-Name': project.group + '.mail.core')
+    }
+}
