--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 language: java
 
+jdk: openjdk8
+
 install: true
+
+before_cache:
+    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 
 cache:
     directories:
-        - $HOME/.m2
-        - $HOME/.gradle
+        - $HOME/.m2/
+        - $HOME/.gradle/caches/
+        - $HOME/.gradle/wrapper/
 
 before_script:
     - ./gradlew --version
 
-script:
-    - TERM=dumb ./gradlew build jacocoTestReport jacocoRootReport
+script: ./gradlew build -S
 
-jdk:
-    - oraclejdk8
-
-before_install:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+env: TERM=dumb
 
 after_success:
-    ./gradlew coveralls
+    - ./gradlew coveralls
